fix: font spacing on favorite table

--- a/client/src/app/modules/favorites-page/favorites-page.component.css
+++ b/client/src/app/modules/favorites-page/favorites-page.component.css
@@ -6,3 +6,7 @@
   color: #0918ec;
   cursor: pointer;
 }
+
+td {
+  white-space: nowrap;
+}
